[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cstag-cli"
version = "0.1.1"
description = "Command line interface of cstag to manipulate the minimap2's CS tag"
authors = [{ name = "Akihiro Kuno", email = "akuno@md.tsukuba.ac.jp" }]
requires-python = ">=3.7"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }

dependencies = ["pysam", "cstag"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/akikuno/cstag-cli"
repository = "https://github.com/akikuno/cstag-cli"


[project.scripts]
cstag = "cstag_cli.main:main"

[tool.setuptools]
packages.find = { where = ["src"] }
