[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cstag-cli"
version = "1.0.0"
description = "Command line interface of cstag to manipulate the minimap2's CS tag"
authors = ["Akihiro Kuno <akuno@md.tsukuba.ac.jp>"]
homepage = "https://github.com/akikuno/cstag-cli"
repository = "https://github.com/akikuno/cstag-cli"
readme = "README.md"
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.7"
pysam = ">=0.19.0"
cstag = ">=0.6.2"

[tool.poetry.scripts]
cstag = "cstag_cli.main:main"
